# w3af-packages

./: README.md  convertTabs.py  describePlugins-html.py  socksClient-vmnet8.py  socksClient.py
debian/: dependencyCheck.py  mk_debian_directory.sh
freebsd/: Makefile  distinfo  pkg-descr  pkg-plist
freebsd/files/: w3af_gui.sh
generic/: create_bz2.py  requirements.txt
manpage/: w3af.1  w3af_console  w3af_console.1  w3af_gui  w3af_gui.1
nose/: nose.cfg
openbsd/: Makefile
pkg-generation/: make_bz2.sh  mkBz2.sh
pkg-generation/documentation/: commands.txt  epydoc.conf
pkg/documentation/: commands.txt
windows/: w3af_gui.bat.manifest  w3af_update.bat.manifest
windows/dev-portable/: armar_w3af_portable.bat  copy_gtk-runtime.bat  copy_python.bat  copy_svn-client.bat  w3af_console.bat  w3af_gui.bat
windows_installer/: README_.txt  compile_w3af-setup.cmd  compile_w3af-update.cmd  path_manipulation.nsh  readme.txt  w3af-setup.nsi  w3af-setup_v2.nsi  w3af_console.bat.manifest  w3af_gui.bat.manifest  w3af_update.nsi
windows_installer/PortablePython1.0/: PortablePython.bat  SciTEGlobal.properties  python-2.5.msi  python.api  python.properties
windows_installer/dev-portable/: armar_w3af_portable.bat  copy_graphiz.bat  copy_graphiz2.20.bat  copy_python.bat  copy_w3af.bat  install_prerequisite.bat  leame.txt  w3af_update.bat
windows_installer/old/py25/Graphviz2.20/contrib/xdot/: Makefile.am  Makefile.old  libxdot.pc  xdot.c  xdot.h
windows_installer/prerequisite/: nltk-0.9.8.win32-py2.5.msi
windows_installer/python25/: NEWS.txt  README.txt
(+1110 files in other folders)
